# nebgov

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  INTEGRATION_TESTS_SUMMARY.md  PR_DESCRIPTION_ISSUE_185.md  README.md  RELEASING.md  debug_test.ts  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
contracts/governor/: Cargo.toml
contracts/governor-factory/: Cargo.toml  README_TESTS.md
contracts/governor-factory/src/: integration_tests.rs  lib.rs  tests.rs
contracts/governor-factory/test_snapshots/integration_tests/: factory_deploy_produces_working_governor.1.json  test_deterministic_address_prediction.1.json  test_factory_emits_deployment_event.1.json  test_get_governor_returns_correct_addresses.1.json
contracts/governor-factory/test_snapshots/tests/: test_deploy_full_stack.1.json  test_initialize_twice_panics.1.json  test_second_deploy_has_different_addresses.1.json
contracts/governor/src/: events.rs  lib.rs
contracts/governor/src/tests/: governance_cancel.rs  integration.rs  mod.rs  transitions.rs  upgrade.rs  wrapper_governor_integration.rs
contracts/governor/test_snapshots/test/: test_cancel_guardian_active.1.json  test_cancel_guardian_pending_unauthorized.1.json  test_cancel_proposer_active_unauthorized.1.json  test_cancel_proposer_pending.1.json  test_cast_vote_with_reason_emits_event.1.json  test_cast_vote_with_reason_multiple_voters.1.json  test_cast_vote_with_reason_stores_reason.1.json  test_dynamic_quorum_with_oracle.1.json  test_get_receipt_returns_voting_details.1.json  test_multi_token_weighted_voting.1.json  test_proposal_expiry.1.json  test_propose_rejects_empty_targets.1.json  test_propose_rejects_mismatched_lengths.1.json  test_propose_with_multiple_targets.1.json  test_queue_expired_proposal_fails.1.json  test_quorum_and_state.1.json  test_vote_type_quadratic_weighting.1.json  test_vote_type_simple_rejects_abstain.1.json
contracts/governor/test_snapshots/tests/: governor_upgraded_event_helper_emits_expected_topic.1.json  update_config_rejects_caller_that_is_not_the_contract_address.1.json  update_config_rejects_invalid_quorum_numerator.1.json  update_config_succeeds_with_contract_self_auth.1.json  (+1 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: governor_state.rs  multi_action_proposal.rs
(+1490 files in other folders)
