[package]
name = "sorogov-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
soroban-sdk = { workspace = true }

[dependencies.sorogov-governor]
path = "../contracts/governor"

[[bin]]
name = "governor_state"
path = "fuzz_targets/governor_state.rs"
doc = false

[[bin]]
name = "multi_action_proposal"
path = "fuzz_targets/multi_action_proposal.rs"
doc = false
