[package]
name = "sorogov-governor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
sorogov-timelock = { path = "../timelock" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sorogov-token-votes = { path = "../token-votes", features = ["testutils"] }
sorogov-token-votes-wrapper = { path = "../token-votes-wrapper", features = ["testutils"] }
sorogov-governor-factory = { path = "../governor-factory", features = ["testutils"] }
